--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /.phpunit.cache
 /node_modules
 /waweb_server/node_modules
+/waweb_server/.wwebjs_cache
 /public/build
 /public/hot
 /public/storage
